Editng iphone responsiveness and Gallery

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     <img src="img/gallery 6.jpg" alt="Gallery Image 6" class="portfolio__gallery__img">
                     <figcaption class="portfolio__gallery__caption">
                         <span class="portfolio__gallery__text--1">Street&nbsp;Style</span>
-                        <span class="portfolio__gallery__text--2">Model- Oksana D</span>
+                        <span class="portfolio__gallery__text--2">Model- Oksana</span>
                     </figcaption>
                 </figure>
                 <figure class="portfolio__gallery__item portfolio__gallery__item--7">
